syntax = "proto3";

package darkscape;

import "google/protobuf/descriptor.proto";

option java_package = "rs.darkscape.proto";

enum Length {
  STATIC = 0;
  BYTE = 1;
  SHORT = 2;
}

enum Source {
  CLIENT = 0;
  SERVER = 1;
}

enum Type {
  INT8 = 0;
  INT16 = 1;
  INT32 = 2;
  INT64 = 3;
  STRING = 4;
}

message PacketOptions {
  uint32 id = 1;
  Source source = 2;
  Length length = 3;
}

message PacketFieldOptions {
  Type type = 1;
}

extend google.protobuf.MessageOptions {
  PacketOptions packet = 50000;
}

extend google.protobuf.FieldOptions {
  PacketFieldOptions field = 50001;
}
